[project]
name = "union_find"
version = "0.0.1"
description = "Simple union-find implementation"
#readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Dmitriy Morozov", email = "dmitriy@mrzv.org" },
]
classifiers = [
    "License :: BSD",
]

[project.urls]
Homepage = "https://github.com/mrzv/union-find"

[build-system]
requires = ["scikit-build-core >=0.4.3"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.4"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"
